fixed time floor in chronoshift

--- a/src/client/components/side-drawer/side-drawer.scss
+++ b/src/client/components/side-drawer/side-drawer.scss
@@ -5,6 +5,7 @@
   background: $white;
   font-size: 13px;
   box-shadow: 1px 0 2px 0 hsla(0, 0, 0, 0.13), 2px 0 12px 0 hsla(0, 0, 0, 0.26);
+  overflow: auto;
 
   .items {
     .item {
